tests/spec/parse/snapshots/indexing_map.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(data: Map<string, bool>) {
    let active = data["user_status"];
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "data",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 4,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Map",
                        params: [
                            Constructor {
                                name: "string",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 6,
                                },
                            },
                            Constructor {
                                name: "bool",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 27,
                                    byte_length: 4,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 17,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "active",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 42,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: IndexedAccess {
                            expression: Identifier {
                                value: "data",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 51,
                                    byte_length: 4,
                                },
                                resolution: Unresolved,
                            },
                            index: Literal {
                                literal: String {
                                    value: "user_status",
                                    raw: false,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 56,
                                    byte_length: 13,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 55,
                                byte_length: 15,
                            },
                            from_colon_syntax: false,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 38,
                            byte_length: 32,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 34,
                    byte_length: 39,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 72,
        },
    },
]
