tests/spec/parse/snapshots/integer_in_type_argument_position.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(value: Array<int, 3>) {}
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "value",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 5,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Array",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 22,
                                    byte_length: 3,
                                },
                            },
                            Constant {
                                value: 3,
                                text: None,
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 27,
                                    byte_length: 1,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 16,
                            byte_length: 13,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 31,
                    byte_length: 2,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 32,
        },
    },
]
