tests/spec/parse/snapshots/lambda_as_argument.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(numbers: Slice<int>) {
    let result = map(numbers, |n| n * 2);
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "numbers",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 7,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Slice",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 24,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 18,
                            byte_length: 10,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 38,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Call {
                            expression: Identifier {
                                value: "map",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 47,
                                    byte_length: 3,
                                },
                                resolution: Unresolved,
                            },
                            args: [
                                Identifier {
                                    value: "numbers",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 51,
                                        byte_length: 7,
                                    },
                                    resolution: Unresolved,
                                },
                                Lambda {
                                    params: [
                                        Binding {
                                            pattern: Identifier {
                                                identifier: "n",
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 61,
                                                    byte_length: 1,
                                                },
                                                binding: None,
                                            },
                                            annotation: None,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                        },
                                    ],
                                    return_annotation: Unknown,
                                    body: Binary {
                                        operator: Multiplication,
                                        left: Identifier {
                                            value: "n",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 64,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                        right: Literal {
                                            literal: Integer {
                                                value: 2,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 68,
                                                byte_length: 1,
                                            },
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 64,
                                            byte_length: 5,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 60,
                                        byte_length: 9,
                                    },
                                },
                            ],
                            spread: None,
                            type_arguments: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 47,
                                byte_length: 23,
                            },
                            call_kind: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 34,
                            byte_length: 36,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 30,
                    byte_length: 43,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 72,
        },
    },
]
